# census-tools

./: Pipfile  README.md  pyproject.toml  run
.github/workflows/: census-tools.yml  python-app.yml
census_tools/: db.py
data/: README.md  manifest.json  run
data/importers/: TS019-2021.sh  constituencies-2022.sh  counties-2021.sh  lads-2020.sh  lads-2021.sh  lsoas-2021.sh  msoas-2021.sh  output-areas-2021.sh  parishes-2020.sh  pfas-2021.sh  regions-2021.sh  utils.sh  wards-2023.sh
notebooks/: README.md
tests/: test_db.py
