[project]
name = "census_tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "jupyter>=1.1.1",
    "plotly>=6.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
]
